# dcstatus

./: .prospector.yaml  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml  testing.yml
dcstatus/: changelog.py  hooks.py  microsoft.py  status.py  stores.py
